[package]
name = "keto_recipes_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.11"
serde = "1.0.155"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls",  "postgres" ] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
