[package]
name = "keto_recipes_api"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"

[dependencies]
axum = "0.6.11"
serde = { version = "1.0.155", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
